feat: SEO 메타 태그 및 대표 이미지 추가

--- a/academy-website/public/index.html
+++ b/academy-website/public/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#0d0d2b" />
+    
+    <!-- SEO Meta Tags -->
+    <title>나니아 아카데미 | 차세대 AI 코딩 교육, 웹 개발 부트캠프</title>
     <meta
       name="description"
-      content="Narnia Academy - The Future of AI Education"
+      content="나니아 아카데미에서 미래를 코딩하세요. 현업 전문가가 진행하는 AI 특강, 알고리즘 캠프, React/Node.js 기반 풀스택 웹 개발 부트캠프."
     />
+    <meta name="keywords" content="코딩, 코딩 교육, AI, 인공지능, 부트캠프, 웹 개발, 풀스택, React, Node.js, 파이썬, 알고리즘, 코딩 테스트, 프로그래밍 학원">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://Shawn-kcs.github.io/Narnia_Lab/">
+    <meta property="og:title" content="나니아 아카데미 | 차세대 AI 코딩 교육">
+    <meta property="og:description" content="현업 전문가가 진행하는 AI 특강, 알고리즘 캠프, React/Node.js 기반 풀스택 웹 개발 부트캠프.">
+    <meta property="og:image" content="%PUBLIC_URL%/narnia-lab-logo.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://Shawn-kcs.github.io/Narnia_Lab/">
+    <meta property="twitter:title" content="나니아 아카데미 | 차세대 AI 코딩 교육">
+    <meta property="twitter:description" content="현업 전문가가 진행하는 AI 특강, 알고리즘 캠프, React/Node.js 기반 풀스택 웹 개발 부트캠프.">
+    <meta property="twitter:image" content="%PUBLIC_URL%/narnia-lab-logo.jpg">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
@@ -16,8 +35,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-    <title>Narnia Academy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
