feat: Google Search Console 소유권 확인 태그 추가

--- a/academy-website/public/index.html
+++ b/academy-website/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0d0d2b" />
+    <meta name="google-site-verification" content="Xd538FhSYcp6kF_gcKIIAvFtiAfdoCdck1B6EzijhnY" />
     
     <!-- SEO Meta Tags -->
     <title>나니아 아카데미 | 차세대 AI 코딩 교육, 웹 개발 부트캠프</title>
